fix: inserção de overflow na imagem do produto

--- a/codigo-fonte/frontend/src/atomic/components/molecules/ProductBanner/styles.module.scss
+++ b/codigo-fonte/frontend/src/atomic/components/molecules/ProductBanner/styles.module.scss
@@ -22,6 +22,7 @@
   }
 
   &__imageContainer {
+    overflow: hidden;
     @include screen-size("tablet") {
       grid-area: 1 / 1 / 4 / 2;
     }
@@ -51,10 +52,13 @@
     display: flex;
     justify-content: flex-end;
     gap: 2rem;
-    cursor: pointer;
 
     @include screen-size("tablet") {
       grid-area: 3 / 2 / 4 / 3;
     }
+  }
+
+  &__arrows {
+    cursor: pointer;
   }
 }
